# AI-Agent-Lab

./: .gitignore  README.md
stage-1-core-agent-with-tools/: .env.example  README.md  config.py  main.py
stage-1-core-agent-with-tools/agent/: loop.py  prompts.py
stage-1-core-agent-with-tools/tools/: registry.py  weather.py  word_count.py
stage-2-multi-agent-systems/: .env.example  config.py  main.py  requirements.txt
stage-2-multi-agent-systems/agents/: base.py  research_agent.py
stage-2-multi-agent-systems/orchestrator/: code_driven.py  llm_driven.py
stage-3-memory-and-rag/: main.py
stage-3-memory-and-rag/agents/: base.py  research_agent.py
stage-3-memory-and-rag/memory/: models.py  short_term.py
stage-3-memory-and-rag/orchestrator/: code_driven.py  llm_driven.py  schemas.py
stage-3-memory-and-rag/tools/: calculator.py  registry.py
stage-4-guardrails/: config.py  main.py  requirements.txt
stage-4-guardrails/agents/: base.py  reviewer_agent.py
stage-4-guardrails/guardrails/: tools.py
stage-4-guardrails/memory/: episodic.py
stage-4-guardrails/orchestrator/: code_driven.py  llm_driven.py
stage-5-evals-and-observability/evals/: datasets.py  harness_offline.py
stage-5-evals-and-observability/memory/: __init__.py  db.py
stage-6-production-repo-and-api/: .env.example  README.md  config.py  requirements.txt
stage-7-auth-multitenant-and-rate-limiting/: main.py  requirements.txt
stage-8-pricing-billing-and-feature-flags/: .env.example
stage-8-pricing-billing-and-feature-flags/infra/: pyproject.toml
(+79 files in other folders)
